mType/tests/testFiles/import/error/interfaceCycle/IfaceA.mt
import { IB } from "./IfaceB.mt";

public interface IA extends IB {
    function tagA(): string;
}
